2008-07-16  Stefan Monnier  <monnier@iro.umontreal.ca>

	* keymap.c: Remove all NS-specific code.
	(where_is_preferred_modifier, Vwhere_is_preferred_modifier): New vars.
	(preferred_sequence_p): Rename from ascii_sequence_p; pay attention to
	where_is_preferred_modifier, return a different value depending on how
	preferred is the binding.
	(where_is_internal): Adjust accordingly.
	(Fwhere_is_internal): Refresh where_is_preferred_modifier.
	Adjust to new preferred_sequence_p.
	(syms_of_keymap): Declare `where-is-preferred-modifier'.
	* keyboard.c (parse_solitary_modifier): Not static any more.
	* keyboard.h (parse_solitary_modifier): Declare.

2008-07-16  Andreas Schwab  <schwab@suse.de>

	* Makefile.in (SOME_MACHINE_LISP): Remove easy-mmode, fix spelling
	of easymenu.

2008-07-16  Chong Yidong  <cyd@stupidchicken.com>

	* xdisp.c (move_it_in_display_line): Account for word wrap, so
	that we don't move off the line.

2008-07-16  Stefan Monnier  <monnier@iro.umontreal.ca>

	* keyboard.c (Qsuper): Remove.
	(parse_menu_item): Don't call where_is_internal specially for NS.

2008-07-16  Dan Nicolaescu  <dann@ics.uci.edu>

	* s/gnu-linux.h: Remove boilerplate comments.

	* m/alpha.h (__ELF__): Consolidate conditions.

	* m/m68k.h (linux): Use GNU_LINUX instead.
	Remove boilerplate comments.

	* m/intel386.h: Undo reactoring from previous change.
	(LIB_STANDARD): All systems that define USG define LIB_STANDARD
	too, remove dead code.
	(linux): Use GNU_LINUX instead.

2008-07-16  Jason Rumney  <jasonr@gnu.org>

	* w32gui.h: Repeat 26 June changes lost by last change.

2008-07-16  Dan Nicolaescu  <dann@ics.uci.edu>

	* systty.h: Remove code for Aix on 386, unsupported platform.

	* s/ms-w32.h: Remove boilerplate comments.
	(fcloseall, fgetchar, flushall, fputchar, getw, putw): Remove, unused.

	* s/gnu-linux.h (TERM): Remove support.
	(HAVE_SYSVIPC): Remove, unused.
	(A_TEXT_OFFSET, A_TEXT_SEEK, ADJUST_EXEC_HEADER): Remove, not used
	for this system.
